Fix margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,7 @@ section ul{
     }
 
     main h2 {
-      margin: 0 2rem;
+      margin: 3rem 2rem;
     }
 
     .research-card__header {
